remove mandatory variable for SCS